Add gitignore. Added files created during demo. Fixed compilation and runtime issues preventing application to start.

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   "AppConfig": {
     "Jwt": {
       "Issuer": "example.com",
-      "Key": "supersecretkey"
+      "TokenKey": "supersecretkey"
     }
   }
 }
